--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,18 @@ categories = ["embedded", "hardware-support", "no-std"]
 description = "Support for Adafruit nRF52 Feathers"
 keywords = ["arm", "cortex-m", "nrf52", "hal"]
 license = "MIT OR Apache-2.0"
-name = "adafruit-nrf52pro-bsc"
+name = "adafruit-nrf52-pro-bsc"
 repository = "https://github.com/nrf-rs/nrf-hal"
 version = "0.6.0"
 edition = "2018"
 
 [dependencies]
-nrf52832-hal = { path = "../../nrf52832-hal" }
+nrf52832-hal = "0.10.0"
 
 [dev-dependencies]
 cortex-m-rt = "0.6.12"
-cortex-m-semihosting = "~0.3"
-panic-semihosting = "~0.5"
-nb = "~0.1"
+panic-semihosting = "0.5"
+nb = "0.1"
 
 [features]
 rt = ["nrf52832-hal/rt"]
